--- a/src-tauri/gen/android/app/src/main/res/values/colors.xml
+++ b/src-tauri/gen/android/app/src/main/res/values/colors.xml
@@ -3,4 +3,146 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="ampersand_bg">#171717</color>
+
+    <color name="md_theme_primary">#30628C</color>
+    <color name="md_theme_onPrimary">#FFFFFF</color>
+    <color name="md_theme_primaryContainer">#CEE5FF</color>
+    <color name="md_theme_onPrimaryContainer">#001D33</color>
+    <color name="md_theme_secondary">#51606F</color>
+    <color name="md_theme_onSecondary">#FFFFFF</color>
+    <color name="md_theme_secondaryContainer">#D5E4F7</color>
+    <color name="md_theme_onSecondaryContainer">#0E1D2A</color>
+    <color name="md_theme_tertiary">#68587A</color>
+    <color name="md_theme_onTertiary">#FFFFFF</color>
+    <color name="md_theme_tertiaryContainer">#EFDBFF</color>
+    <color name="md_theme_onTertiaryContainer">#231533</color>
+    <color name="md_theme_error">#BA1A1A</color>
+    <color name="md_theme_onError">#FFFFFF</color>
+    <color name="md_theme_errorContainer">#FFDAD6</color>
+    <color name="md_theme_onErrorContainer">#410002</color>
+    <color name="md_theme_background">#F7F9FF</color>
+    <color name="md_theme_onBackground">#181C20</color>
+    <color name="md_theme_surface">#F7F9FF</color>
+    <color name="md_theme_onSurface">#181C20</color>
+    <color name="md_theme_surfaceVariant">#DEE3EB</color>
+    <color name="md_theme_onSurfaceVariant">#42474E</color>
+    <color name="md_theme_outline">#72777F</color>
+    <color name="md_theme_outlineVariant">#C2C7CF</color>
+    <color name="md_theme_scrim">#000000</color>
+    <color name="md_theme_inverseSurface">#2D3135</color>
+    <color name="md_theme_inverseOnSurface">#EFF1F6</color>
+    <color name="md_theme_inversePrimary">#9BCBFB</color>
+    <color name="md_theme_primaryFixed">#CEE5FF</color>
+    <color name="md_theme_onPrimaryFixed">#001D33</color>
+    <color name="md_theme_primaryFixedDim">#9BCBFB</color>
+    <color name="md_theme_onPrimaryFixedVariant">#0F4A73</color>
+    <color name="md_theme_secondaryFixed">#D5E4F7</color>
+    <color name="md_theme_onSecondaryFixed">#0E1D2A</color>
+    <color name="md_theme_secondaryFixedDim">#B9C8DA</color>
+    <color name="md_theme_onSecondaryFixedVariant">#3A4857</color>
+    <color name="md_theme_tertiaryFixed">#EFDBFF</color>
+    <color name="md_theme_onTertiaryFixed">#231533</color>
+    <color name="md_theme_tertiaryFixedDim">#D3BFE6</color>
+    <color name="md_theme_onTertiaryFixedVariant">#504061</color>
+    <color name="md_theme_surfaceDim">#D8DAE0</color>
+    <color name="md_theme_surfaceBright">#F7F9FF</color>
+    <color name="md_theme_surfaceContainerLowest">#FFFFFF</color>
+    <color name="md_theme_surfaceContainerLow">#F1F3F9</color>
+    <color name="md_theme_surfaceContainer">#ECEEF3</color>
+    <color name="md_theme_surfaceContainerHigh">#E6E8EE</color>
+    <color name="md_theme_surfaceContainerHighest">#E0E2E8</color>
+    <color name="md_theme_primary_mediumContrast">#07466F</color>
+    <color name="md_theme_onPrimary_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_primaryContainer_mediumContrast">#4878A4</color>
+    <color name="md_theme_onPrimaryContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondary_mediumContrast">#364453</color>
+    <color name="md_theme_onSecondary_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryContainer_mediumContrast">#687686</color>
+    <color name="md_theme_onSecondaryContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiary_mediumContrast">#4C3C5D</color>
+    <color name="md_theme_onTertiary_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryContainer_mediumContrast">#7F6D91</color>
+    <color name="md_theme_onTertiaryContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_error_mediumContrast">#8C0009</color>
+    <color name="md_theme_onError_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_errorContainer_mediumContrast">#DA342E</color>
+    <color name="md_theme_onErrorContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_background_mediumContrast">#F7F9FF</color>
+    <color name="md_theme_onBackground_mediumContrast">#181C20</color>
+    <color name="md_theme_surface_mediumContrast">#F7F9FF</color>
+    <color name="md_theme_onSurface_mediumContrast">#181C20</color>
+    <color name="md_theme_surfaceVariant_mediumContrast">#DEE3EB</color>
+    <color name="md_theme_onSurfaceVariant_mediumContrast">#3E434A</color>
+    <color name="md_theme_outline_mediumContrast">#5A5F66</color>
+    <color name="md_theme_outlineVariant_mediumContrast">#767B82</color>
+    <color name="md_theme_scrim_mediumContrast">#000000</color>
+    <color name="md_theme_inverseSurface_mediumContrast">#2D3135</color>
+    <color name="md_theme_inverseOnSurface_mediumContrast">#EFF1F6</color>
+    <color name="md_theme_inversePrimary_mediumContrast">#9BCBFB</color>
+    <color name="md_theme_primaryFixed_mediumContrast">#4878A4</color>
+    <color name="md_theme_onPrimaryFixed_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_primaryFixedDim_mediumContrast">#2D608A</color>
+    <color name="md_theme_onPrimaryFixedVariant_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixed_mediumContrast">#687686</color>
+    <color name="md_theme_onSecondaryFixed_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixedDim_mediumContrast">#4F5D6D</color>
+    <color name="md_theme_onSecondaryFixedVariant_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixed_mediumContrast">#7F6D91</color>
+    <color name="md_theme_onTertiaryFixed_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixedDim_mediumContrast">#665577</color>
+    <color name="md_theme_onTertiaryFixedVariant_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceDim_mediumContrast">#D8DAE0</color>
+    <color name="md_theme_surfaceBright_mediumContrast">#F7F9FF</color>
+    <color name="md_theme_surfaceContainerLowest_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceContainerLow_mediumContrast">#F1F3F9</color>
+    <color name="md_theme_surfaceContainer_mediumContrast">#ECEEF3</color>
+    <color name="md_theme_surfaceContainerHigh_mediumContrast">#E6E8EE</color>
+    <color name="md_theme_surfaceContainerHighest_mediumContrast">#E0E2E8</color>
+    <color name="md_theme_primary_highContrast">#00243D</color>
+    <color name="md_theme_onPrimary_highContrast">#FFFFFF</color>
+    <color name="md_theme_primaryContainer_highContrast">#07466F</color>
+    <color name="md_theme_onPrimaryContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondary_highContrast">#152331</color>
+    <color name="md_theme_onSecondary_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryContainer_highContrast">#364453</color>
+    <color name="md_theme_onSecondaryContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiary_highContrast">#2A1C3A</color>
+    <color name="md_theme_onTertiary_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryContainer_highContrast">#4C3C5D</color>
+    <color name="md_theme_onTertiaryContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_error_highContrast">#4E0002</color>
+    <color name="md_theme_onError_highContrast">#FFFFFF</color>
+    <color name="md_theme_errorContainer_highContrast">#8C0009</color>
+    <color name="md_theme_onErrorContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_background_highContrast">#F7F9FF</color>
+    <color name="md_theme_onBackground_highContrast">#181C20</color>
+    <color name="md_theme_surface_highContrast">#F7F9FF</color>
+    <color name="md_theme_onSurface_highContrast">#000000</color>
+    <color name="md_theme_surfaceVariant_highContrast">#DEE3EB</color>
+    <color name="md_theme_onSurfaceVariant_highContrast">#1F242A</color>
+    <color name="md_theme_outline_highContrast">#3E434A</color>
+    <color name="md_theme_outlineVariant_highContrast">#3E434A</color>
+    <color name="md_theme_scrim_highContrast">#000000</color>
+    <color name="md_theme_inverseSurface_highContrast">#2D3135</color>
+    <color name="md_theme_inverseOnSurface_highContrast">#FFFFFF</color>
+    <color name="md_theme_inversePrimary_highContrast">#E0EDFF</color>
+    <color name="md_theme_primaryFixed_highContrast">#07466F</color>
+    <color name="md_theme_onPrimaryFixed_highContrast">#FFFFFF</color>
+    <color name="md_theme_primaryFixedDim_highContrast">#002F4E</color>
+    <color name="md_theme_onPrimaryFixedVariant_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixed_highContrast">#364453</color>
+    <color name="md_theme_onSecondaryFixed_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixedDim_highContrast">#202E3C</color>
+    <color name="md_theme_onSecondaryFixedVariant_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixed_highContrast">#4C3C5D</color>
+    <color name="md_theme_onTertiaryFixed_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixedDim_highContrast">#352645</color>
+    <color name="md_theme_onTertiaryFixedVariant_highContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceDim_highContrast">#D8DAE0</color>
+    <color name="md_theme_surfaceBright_highContrast">#F7F9FF</color>
+    <color name="md_theme_surfaceContainerLowest_highContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceContainerLow_highContrast">#F1F3F9</color>
+    <color name="md_theme_surfaceContainer_highContrast">#ECEEF3</color>
+    <color name="md_theme_surfaceContainerHigh_highContrast">#E6E8EE</color>
+    <color name="md_theme_surfaceContainerHighest_highContrast">#E0E2E8</color>
 </resources>
