--- a/src/styles/override.css
+++ b/src/styles/override.css
@@ -1,21 +1,21 @@
 @import url(ios.css);
 @import url(markdown.css);
 
-@supports (padding-top: env(safe-area-inset-top)) {
-	html {
-		--ion-safe-area-top: var(--device-inset-top, env(safe-area-inset-top, 0px));
-		--ion-safe-area-left: var(--device-inset-left, env(safe-area-inset-left 0px));
-		--ion-safe-area-right: var(--device-inset-right, env(safe-area-inset-right, 0px));
-		--ion-safe-area-bottom: var(--device-inset-bottom, env(safe-area-inset-bottom, 0px));
-	}
-}
-
 @supports (padding-top: 20px) {
 	html {
 		--ion-safe-area-top: var(--device-inset-top, 0px);
 		--ion-safe-area-left: var(--device-inset-left, 0px);
 		--ion-safe-area-right: var(--device-inset-right, 0px);
 		--ion-safe-area-bottom: var(--device-inset-bottom, 0px);
+	}
+}
+
+@supports (padding-top: env(safe-area-inset-top)) {
+	html {
+		--ion-safe-area-top: var(--device-inset-top, env(safe-area-inset-top, 0px));
+		--ion-safe-area-left: var(--device-inset-left, env(safe-area-inset-left, 0px));
+		--ion-safe-area-right: var(--device-inset-right, env(safe-area-inset-right, 0px));
+		--ion-safe-area-bottom: var(--device-inset-bottom, env(safe-area-inset-bottom, 0px));
 	}
 }
 
