adjust alert padding

--- a/src/lib/theme/components/alert.css
+++ b/src/lib/theme/components/alert.css
@@ -4,6 +4,27 @@
 	box-shadow: var(--md3-elevation-3)
 }
 
+.md3 ion-alert.md .alert-head {
+	padding-top: 0;
+	padding-left: 0;
+	padding-right: 0;
+	padding-bottom: 16px;
+}
+
+.md3 ion-alert.md .alert-input-group {
+	padding-top: 0;
+	padding-left: 0;
+	padding-right: 0;
+	padding-bottom: 0;
+}
+
+.md3 ion-alert.md .alert-button-group {
+	padding-top: 24px;
+	padding-left: 0;
+	padding-right: 0;
+	padding-bottom: 0;
+}
+
 .md3 ion-alert.md .alert-button {
 	text-transform: none;
 }
