fix our css override in ion-input and ion-textarea

--- a/src/styles/override.css
+++ b/src/styles/override.css
@@ -83,7 +83,7 @@ ion-label.nowrap > *:not(div) {
 	overflow: hidden !important;
 }
 
-.md ion-input,
-.md ion-textarea {
-	margin: 16px 0;
+.md ion-input.input-label-placement-floating,
+.md ion-textarea.input-label-placement-floating {
+	margin: 16px 0 0 0;
 }
