--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -104,3 +104,7 @@
     background-color: var(--color);
     vertical-align: baseline;
 }
+
+.markdown-content span.text-color {
+    color: var(--markdown-text-color, inherit);
+}
