i am cringe therefore text gradients

--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -106,5 +106,8 @@
 }
 
 .markdown-content span.text-color {
-    color: var(--markdown-text-color, inherit);
+    background: linear-gradient(to right, var(--markdown-text-color-start), var(--markdown-text-color-end));
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
 }
