--- a/src/styles/override.css
+++ b/src/styles/override.css
@@ -100,3 +100,10 @@ ion-datetime {
 .md3 ion-datetime {
 	--wheel-fade-background-rgb: var(--md3-surface-container);
 }
+
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration {
+	display: none !important;
+}
