--- a/src/lib/theme/components/headerbar.css
+++ b/src/lib/theme/components/headerbar.css
@@ -1,18 +1,18 @@
 /* Headerbar */
-.md.md3 ion-toolbar {
+.md ion-toolbar {
 	--min-height: 64px;
 	--padding-start: 16px;
 	--padding-end: 16px;
 }
 
-.md.md3 ion-toolbar *[slot=start] {
+.md ion-toolbar *[slot=start] {
 	color: rgb(var(--md3-on-surface));
 }
 
-.md.md3 ion-toolbar *[slot=end] {
+.md ion-toolbar *[slot=end] {
 	color: rgb(var(--md3-on-surface-variant));
 }
 
-.md.md3 ion-header {
+.md ion-header {
 	box-shadow: var(--md3-elevation-0);
 }
