--- a/src/lib/theme/components/modal.css
+++ b/src/lib/theme/components/modal.css
@@ -1,10 +1,10 @@
 /* Headerbar in modal */
-.md.md3 ion-modal.modal-sheet ion-header ion-toolbar:first-of-type {
+.md ion-modal.modal-sheet ion-header ion-toolbar:first-of-type {
 	--padding-top: 16px;
 	--min-height: 80px;
 }
 
 /* Modal */
-.md.md3 ion-modal::part(handle) {
+.md ion-modal::part(handle) {
 	top: 16px;
 }
