--- a/src/lib/theme/components/segment.css
+++ b/src/lib/theme/components/segment.css
@@ -1,36 +1,36 @@
 /* Segment Buttons */
-.md.md3 ion-segment ion-segment-button::part(native) {
+.md ion-segment ion-segment-button::part(native) {
 	text-transform: none;
 	letter-spacing: normal;
 	font-size: unset;
 }
 
-.md.md3 ion-segment ion-segment-button::part(indicator-background) {
+.md ion-segment ion-segment-button::part(indicator-background) {
 	width: 50%;
 	margin: auto;
 	height: 3px;
 	border-radius: 3px 3px 0 0;
 }
 
-.md.md3 ion-segment.segment-alt ion-segment-button::part(native) {
+.md ion-segment.segment-alt ion-segment-button::part(native) {
 	border: 1px solid var(--color);
 }
 
-.md.md3 ion-segment.segment-alt ion-segment-button:first-child::part(native) {
+.md ion-segment.segment-alt ion-segment-button:first-child::part(native) {
 	border-right: 0;
 	border-radius: 48px 0 0 48px;
 }
 
-.md.md3 ion-segment.segment-alt ion-segment-button:last-child::part(native) {
+.md ion-segment.segment-alt ion-segment-button:last-child::part(native) {
 	border-left: 0;
 	border-radius: 0 48px 48px 0;
 }
 
-.md.md3 ion-segment.segment-alt ion-segment-button.segment-button-checked::part(native) {
+.md ion-segment.segment-alt ion-segment-button.segment-button-checked::part(native) {
 	background-color: rgba(var(--ion-color-primary-rgb), 0.2);
 	color: var(--ion-text-color);
 }
 
-.md.md3 ion-segment.segment-alt ion-segment-button::part(indicator-background) {
+.md ion-segment.segment-alt ion-segment-button::part(indicator-background) {
 	height: 0px;
 }
