--- a/src/lib/theme/components/tabs.css
+++ b/src/lib/theme/components/tabs.css
@@ -1,33 +1,33 @@
 /* Tab bar */
-.md.md3 ion-tab-bar ion-tab-button ion-icon {
+.md ion-tab-bar ion-tab-button ion-icon {
 	font-size: 24px;
 	margin: 0 0 4px;
 	padding: 4px 4px;
 	border-radius: 16px;
 }
 
-.md.md3 ion-tab-bar ion-tab-button ion-label {
+.md ion-tab-bar ion-tab-button ion-label {
 	margin: 0;
 }
 
-.md.md3 ion-tab-bar {
+.md ion-tab-bar {
 	--color: rgb(var(--md3-surface-container));
 	--border: none;
 	height: 80px;
 }
 
-.md.md3 ion-tab-bar ion-tab-button {
+.md ion-tab-bar ion-tab-button {
 	--padding-top: 12px;
 	--padding-bottom: 16px;
 	--ripple-color: transparent;
 	--color: rgb(var(--md3-on-surface-variant));
 }
 
-.md.md3 ion-tab-bar ion-tab-button.tab-selected {
+.md ion-tab-bar ion-tab-button.tab-selected {
 	--color: rgb(var(--md3-on-surface));
 }
 
-.md.md3 ion-tab-bar ion-tab-button.tab-selected ion-icon {
+.md ion-tab-bar ion-tab-button.tab-selected ion-icon {
 	padding: 4px 20px;
 	transition: background-color .2s ease-in-out,
 		padding .2s ease-in-out;
