--- a/src/lib/theme/components/toggle.css
+++ b/src/lib/theme/components/toggle.css
@@ -1,16 +1,16 @@
 /* Toggles */
-.md.md3 ion-toggle::part(track) {
+.md ion-toggle::part(track) {
 	background-color: var(--ion-toolbar-background);
 	width: 56px;
 	height: 32px;
 	border-radius: 100px;
 }
 
-.md.md3 ion-toggle::part(track) {
+.md ion-toggle::part(track) {
 	border: 2px solid var(--ion-text-color-step-400);
 }
 
-.md.md3 ion-toggle::part(handle) {
+.md ion-toggle::part(handle) {
 	background-color: var(--ion-text-color-step-400);
 	width: 18px;
 	height: 18px;
@@ -18,12 +18,12 @@
 	--handle-spacing: 8px;
 }
 
-.md.md3 ion-toggle.toggle-checked::part(track) {
+.md ion-toggle.toggle-checked::part(track) {
 	background-color: var(--ion-color-primary);
 	border: 2px solid var(--ion-color-primary);
 }
 
-.md.md3 ion-toggle.toggle-checked::part(handle) {
+.md ion-toggle.toggle-checked::part(handle) {
 	background-color: var(--ion-toolbar-background);
 	width: 24px;
 	height: 24px;
