--- a/src/lib/theme/components/cards.css
+++ b/src/lib/theme/components/cards.css
@@ -28,7 +28,7 @@
 	border-bottom-left-radius: 12px;
 }
 
-.ios-md3 ion-card,
+.ios.md3 ion-card,
 .ios.md3 ion-card.elevated {
 	--background: rgb(var(--md3-surface-container-low));
 	--color: rgb(var(--md3-on-surface));
